# lab_aisd4a

./: CMakeLists.txt  main.c  text1.txt
lib_tree/: input.c  timer.c  timer.h  tree.c  tree.h
